--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
+    "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
     "react-dom": "^16.12.0",
@@ -14,6 +16,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15",
     "universal-cookie": "^4.0.2"
   },
   "scripts": {
