--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
+    "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
