--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "envify": "^4.1.0",
+    "terser": "^4.4.3",
+    "uglifyify": "^5.0.2"
   }
 }
