--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.20.2",
+    "material-ui-popup-state": "^1.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
