--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.2",
+    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
+    "material-table": "^1.55.0",
     "material-ui": "^0.20.2",
     "material-ui-popup-state": "^1.5.1",
     "prop-types": "^15.7.2",
