--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "axios": "^0.19.0",
+    "base-64": "^0.1.0",
     "history": "^4.10.1",
     "material-table": "^1.55.0",
     "material-ui": "^0.20.2",
