--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "cash",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
   "dependencies": {
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
+    "@material-ui/styles": "^4.9.0",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
     "history": "^4.10.1",
     "material-table": "^1.55.0",
     "material-ui": "^0.20.2",
-    "material-ui-popup-state": "^1.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
@@ -24,8 +23,7 @@
     "react-scripts": "^3.3.0",
     "react-swipeable-views": "^0.13.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "universal-cookie": "^4.0.2"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
