--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
     "@material-ui/styles": "^4.9.0",
+    "@reach/router": "^1.3.3",
     "axios": "^0.19.0",
     "base-64": "^0.1.0",
     "history": "^4.10.1",
@@ -16,10 +17,11 @@
     "react-axios": "^2.0.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
-    "react-native": "^0.61.5",
+    "react-native": "^0.62.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
