--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-axios": "^2.0.3",
     "react-cookie": "^4.0.3",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.12.0",
     "react-native": "^0.62.1",
     "react-redux": "^7.1.3",
