--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.4",
+    "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
